# langchain-azure

./: .gitignore  CONTRIBUTING.md  README.md  maintainers.md
libs/azure-ai/: README.md  pyproject.toml
libs/azure-ai/docs/: azure_ai_agents_demo_v1.ipynb  azure_ai_middleware_demo.ipynb  azure_ai_models_demo.ipynb  content_understanding_loader_demo.ipynb
libs/azure-ai/langchain_azure_ai/: _resources.py
libs/azure-ai/langchain_azure_ai/agents/: __init__.py
libs/azure-ai/langchain_azure_ai/agents/_v1/: agent_service.py
libs/azure-ai/langchain_azure_ai/agents/_v2/: base.py
libs/azure-ai/langchain_azure_ai/agents/_v2/prebuilt/: factory.py
libs/azure-ai/langchain_azure_ai/agents/middleware/: __init__.py  _content_safety.py
libs/azure-ai/langchain_azure_ai/agents/prebuilt/: __init__.py
libs/azure-ai/langchain_azure_ai/callbacks/tracers/: __init__.py  auto_instrument.py  inference_tracing.py
libs/azure-ai/langchain_azure_ai/chat_history/: azure_ai_memory.py  cosmos_db.py
libs/azure-ai/langchain_azure_ai/chat_models/: __init__.py  inference.py  openai.py
libs/azure-ai/langchain_azure_ai/document_loaders/: __init__.py  _constants.py  content_understanding.py
libs/azure-ai/langchain_azure_ai/evaluation/: __init__.py  converter.py  foundry.py  helpers.py
libs/azure-ai/langchain_azure_ai/query_constructors/: cosmosdb_no_sql.py
libs/azure-ai/langchain_azure_ai/retrievers/: azure_ai_memory_retriever.py
libs/azure-ai/langchain_azure_ai/tools/: __init__.py  _openai_tools.py  _toolbox.py  logic_apps.py
libs/azure-ai/langchain_azure_ai/tools/builtin/: __init__.py  _tools.py
libs/azure-ai/langchain_azure_ai/tools/services/: content_understanding.py  speech_to_text.py  text_to_speech.py
libs/azure-ai/langchain_azure_ai/utils/: env.py
libs/azure-ai/langchain_azure_ai/vectorstores/: __init__.py  azure_cosmos_db_no_sql.py  cache.py
libs/azure-ai/tests/integration_tests/: test_content_understanding_loader.py
libs/azure-ai/tests/integration_tests/agents/: test_react_graph_v2.py
libs/azure-ai/tests/integration_tests/cassettes/: TestCustomAnalyzerIntegration.test_classifier_with_segment_mode.yaml  TestCustomAnalyzerIntegration.test_custom_field_extraction_analyzer.yaml  TestCustomAnalyzerIntegration.test_segment_mode_on_single_page_invoice.yaml  TestDocumentLoading.test_custom_source_label.yaml  TestDocumentLoading.test_load_audio_from_url.yaml  TestDocumentLoading.test_load_image_from_url.yaml  TestDocumentLoading.test_load_invoice_with_field_extraction.yaml  TestDocumentLoading.test_load_pdf_from_url_markdown_mode.yaml  TestDocumentLoading.test_load_pdf_from_url_page_mode.yaml  TestDocumentLoading.test_load_video_from_url.yaml  TestDocumentLoading.test_metadata_selection_excludes_fields.yaml  TestDocumentLoading.test_operation_id_present.yaml  TestDocumentLoading.test_page_mode_document_ids.yaml  TestDocumentLoading.test_page_mode_on_audio_falls_back_to_markdown.yaml
libs/azure-ai/tests/unit_tests/: test_agents_v2.py  test_auto_instrument.py  test_azure_search.py  test_chat_models.py  test_chat_models_openai.py  test_content_understanding_loader.py  test_content_understanding_tool.py  test_evaluation.py  test_guardrails.py  test_image_gen_tool.py  test_inference_tracing.py  test_memory_history.py  test_memory_retriever.py  test_openai_env_vars.py  test_openai_speech_to_text_tool.py  test_speech_to_text_tool.py  test_text_to_speech_tool.py  test_toolbox.py  test_tools_builtin.py
libs/azure-cosmosdb/: LICENSE  Makefile  README.md  pyproject.toml
libs/azure-cosmosdb/.github/: copilot-instructions.md
libs/azure-cosmosdb/.github/instructions/: python-src.instructions.md  python-test.instructions.md
libs/azure-cosmosdb/src/langchain_azure_cosmosdb/: __init__.py  _cache.py  _chat_history.py  _langgraph_cache.py  _langgraph_checkpoint_store.py  _langgraph_store.py  _query_constructor.py  _utils.py  _vectorstore.py
libs/azure-cosmosdb/src/langchain_azure_cosmosdb/aio/: __init__.py  _cache.py  _chat_history.py  _langgraph_cache.py  _langgraph_checkpoint_store.py  _langgraph_store.py  _vectorstore.py
libs/azure-cosmosdb/tests/: embed_test_utils.py
libs/azure-cosmosdb/tests/integration_tests/: test_cache.py  test_chat_history.py  test_langgraph_cache.py  test_langgraph_checkpointer.py  test_langgraph_store.py  test_vectorstore.py
libs/azure-cosmosdb/tests/integration_tests/aio/: test_cache.py  test_chat_history.py  test_langgraph_cache.py  test_langgraph_store.py  test_vectorstore.py
libs/azure-cosmosdb/tests/unit_tests/: test_cache.py  test_chat_history.py  test_imports.py  test_langgraph_cache_keys.py  test_langgraph_checkpoint_keys.py  test_query_constructor.py  test_utils.py  test_vectorstore.py
libs/azure-cosmosdb/tests/unit_tests/aio/: test_cache.py  test_chat_history.py  test_langgraph_cache.py  test_vectorstore.py
libs/azure-dynamic-sessions/: README.md  pyproject.toml
libs/azure-dynamic-sessions/langchain_azure_dynamic_sessions/backends/: __init__.py  sessions.py
libs/azure-dynamic-sessions/langchain_azure_dynamic_sessions/tools/: __init__.py  sessions.py
libs/azure-dynamic-sessions/tests/unit_tests/: test_imports.py  test_sessions_bash_tool.py  test_sessions_python_repl_tool.py
libs/azure-postgresql/: README.md  pyproject.toml
libs/azure-postgresql/tests/: conftest.py
libs/azure-postgresql/tests/langchain/: conftest.py
libs/azure-storage/: README.md  pyproject.toml
libs/azure-storage/langchain_azure_storage/: .gitignore  changefeed.py  changefeed_impl.py  changefeed_impl_printing.py  document_loaders.py  hello.py  requirements.txt  storage_account_playground.py
libs/azure-storage/langchain_azure_storage/testing/: changefeed_loader.py  changefeed_tests.py  default_loader.py  sample_loader.py  segments_chunk_parsing.py  storage_account_actions.py
libs/azure-storage/langchain_azure_storage/vector-store/: embed_changefeed.py
libs/sqlserver/: README.md  pyproject.toml
libs/sqlserver/langchain_sqlserver/: vectorstores.py
samples/: enable_auto_tracing_appinsights.py
samples/react-agent-docintelligence/: pyproject.toml
(+24 files in other folders)
