[project]
name = "langchain-sqlserver"
version = "1.0.1"
description = "An integration package to support SQL Server in LangChain."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
  "azure-core>=1.38.0",
  "azure-identity~=1.16",
  "langchain-core>=1.0,<2.0",
  "numpy>=1,<3",
  "pyodbc~=5.0",
  "SQLAlchemy~=2.0",
]

[project.urls]
repository = "https://github.com/langchain-ai/langchain-azure"
"Source Code" = "https://github.com/langchain-ai/langchain-azure/tree/main/libs/sqlserver"
"Release Notes" = "https://github.com/langchain-ai/langchain-azure/releases"

[build-system]
requires = ["poetry-core~=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
disallow_untyped_defs = true

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.codespell.dependencies]
codespell = "~=2.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pytest = "~=7.4"
python-dotenv = "~=1.0"
ruff = "~=0.5.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }
langchain-text-splitters = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/text-splitters" }
pydantic = "~=2.9"
pytest = "~=7.4"
pytest-asyncio = "~=0.21.1"
pytest-mock = "~=3.10"
pytest-watcher = "~=0.3.4"
python-dotenv = "~=1.0"
syrupy = "~=4.7"

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.test_integration.dependencies]
pytest = "~=7.4"
python-dotenv = "~=1.0"

[tool.poetry.group.typing.dependencies]
mypy = "~=1.10"

[tool.pytest.ini_options]
addopts = [
  "--durations=5",
  "--snapshot-warn-unused",
  "--strict-config",
  "--strict-markers",
]
markers = [
  "compile: mark placeholder test used to compile integration tests without running them",
  "requires: mark tests as requiring a specific library",
]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
constraint-dependencies = ["urllib3>=2.6.3", "cryptography>=46.0.6", "pyjwt>=2.12.0"]
default-groups = ["typing"]

[dependency-groups]
codespell = ["codespell~=2.2"]
dev = ["langchain-core"]
lint = ["pytest~=7.4", "python-dotenv~=1.0", "ruff>=0.5,<0.16"]
test = [
  "langchain-core",
  "langchain-text-splitters",
  "pydantic~=2.9",
  "pytest~=7.4",
  "pytest-asyncio~=0.21.1",
  "pytest-mock~=3.10",
  "pytest-watcher>=0.3.4,<0.7.0",
  "python-dotenv~=1.0",
  "syrupy~=4.7",
]
test_integration = ["pytest~=7.4", "python-dotenv~=1.0"]
typing = ["mypy~=1.10"]

