[project]
name = "react-agent-docintelligence"
version = "0.0.1"
description = "Multi-agent document intake and analysis pipeline using LangGraph and Azure AI Foundry."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10.0,<4.0"

dependencies = [
    "aiohttp~=3.13",
    "azure-core>=1.38.0",
    "python-dotenv>=1.0.1",
    "langchain-core>=1.3.2",
    "langchain==1.0.2",
    "langchain-azure-ai[opentelemetry,tools]>=1.1,<2",
    "langgraph-cli[inmem]>=0.4.24",
    "urllib3>=2.6.3",
    "cryptography>=46.0.6",
    "protobuf>=6.33.5",
    "starlette>=0.49.1",
    "aiohttp>=3.13.3",
    "azure-identity (>=1.25.2,<2.0.0)",
    "langchain-azure-dynamic-sessions (>=0.3.1,<0.4.0)",
]

[tool.poetry]
packages = [{include = "react_agent", from = "src"}]

[tool.poetry.group.dev.dependencies]
mypy = ">=1.20.2"
ruff = ">=0.15.12"
pytest = ">=9.0.3"
pytest-asyncio = "*"
vcrpy = "*"

[build-system]
requires = ["poetry-core~=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
